--- a/react-maps/src/components/layout/styles.css
+++ b/react-maps/src/components/layout/styles.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
 }
 
+a {
+  color: rgb(255, 105, 97) !important;
+}
 .page-contain {
   display: flex;
   min-height: 100vh;
@@ -30,7 +33,7 @@
   transition: transform 0.45s ease, background 0.45s ease;
 
   h3 {
-    color: #2e3c40;
+    color: rgb(255, 105, 97);
     font-size: 3.5em;
     font-weight: 600;
     line-height: 1;
@@ -41,7 +44,7 @@
   }
 
   h4 {
-    color: #627084;
+    color: rgb(255, 105, 97);
     text-transform: uppercase;
     font-size: 1.125em;
     font-weight: 700;
@@ -53,7 +56,7 @@
 
   p {
     opacity: 0;
-    color: #ffffff;
+    color: rgb(255, 105, 97);
     font-weight: 600;
     line-height: 1.8;
     margin: 0 0 1.25em;
@@ -63,7 +66,7 @@
 
   .link-text {
     display: block;
-    color: #753bbd;
+    color: #ff6961;
     font-size: 1.125em;
     font-weight: 600;
     line-height: 1.2;
